logs/Slang/generated/keywords/5.6.2--keyword_longint.sv.log
name: keyword_longint
description: The 'longint' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_longint.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_longint.sv:8:8: error: expected declarator
    bit longint;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_longint.sv:8:16: error: expected declarator
    bit longint;
               ^
